renaming homepage to index

--- a/cruise_details.html
+++ b/cruise_details.html
@@ -33,7 +33,7 @@
       <i class="fa-solid fa-bars"></i>
     </button>
     <ul class="nav-links">
-      <li><a href="homepage.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="results.html?type=cruise_only">CRUISES</a></li>
       <li><a href="results.html?type=cruise_package" class="active">CRUISE PACKAGES</a></li>
       <li><a href="tours.html">TOURS</a></li>
@@ -49,7 +49,7 @@
 
   <!-- Breadcrumb -->
   <nav class="breadcrumb">
-    <a href="homepage.html"><i class="fa-solid fa-house"></i></a>
+    <a href="index.html"><i class="fa-solid fa-house"></i></a>
     <span>›</span>
     <a href="results.html?type=cruise_only">Cruise Only</a>
     <span>›</span>
@@ -435,7 +435,7 @@
     <div class="footer-col">
       <h4>Menu</h4>
       <ul class="footer-nav">
-        <li><a href="homepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="cruises.html">CRUISES</a></li>
         <li><a href="packages.html">CRUISE PACKAGES</a></li>
         <li><a href="tours.html">TOURS</a></li>
