--- a/package-details.html
+++ b/package-details.html
@@ -36,7 +36,7 @@
 
 
     <ul class="nav-links">
-      <li><a href="homepage.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="results.html?type=cruise_only">CRUISES</a></li>
       <li><a href="results.html?type=cruise_package" class="active">CRUISE PACKAGES</a></li>
       <li><a href="tours.html">TOURS</a></li>
@@ -52,7 +52,7 @@
 
   <!-- Breadcrumb -->
   <nav class="breadcrumb">
-    <a href="homepage.html"><i class="fa-solid fa-house"></i></a>
+    <a href="index.html"><i class="fa-solid fa-house"></i></a>
     <span>›</span>
     <a href="results.html?type=cruise_package">Cruise Packages</a>
     <span>›</span>
@@ -693,7 +693,7 @@
     <div class="footer-col">
       <h4>Menu</h4>
       <ul class="footer-nav">
-        <li><a href="homepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="cruises.html">CRUISES</a></li>
         <li><a href="packages.html">CRUISE PACKAGES</a></li>
         <li><a href="tours.html">TOURS</a></li>
