--- a/tour_details.html
+++ b/tour_details.html
@@ -30,7 +30,7 @@
     <nav class="navbar">
       <div class="logo">CruiseTheGreek.com</div>
       <ul class="nav-links">
-        <li><a href="homepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="results.html?type=cruise_only">CRUISES</a></li>
         <li><a href="results.html?type=cruise_package">CRUISE PACKAGES</a></li>
         <li><a href="tours.html" class="active">TOURS</a></li>
@@ -46,7 +46,7 @@
 
     <!-- Breadcrumb -->
     <nav class="breadcrumb">
-      <a href="homepage.html"><i class="fa-solid fa-house"></i></a>
+      <a href="index.html"><i class="fa-solid fa-house"></i></a>
       <span>›</span>
       <a href="tours.html">Athens</a>
       <span>›</span>
@@ -177,7 +177,7 @@
     <div class="footer-col">
       <h4>Menu</h4>
       <ul class="footer-nav">
-        <li><a href="homepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="cruises.html">CRUISES</a></li>
         <li><a href="packages.html">CRUISE PACKAGES</a></li>
         <li><a href="tours.html">TOURS</a></li>
