--- a/tours.html
+++ b/tours.html
@@ -35,7 +35,7 @@
     </button>
 
     <ul class="nav-links">
-      <li><a href="homepage.html">HOME</a></li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="results.html?type=cruise_only">CRUISES</a></li>
       <li><a href="results.html?type=cruise_package">CRUISE PACKAGES</a></li>
       <li><a href="tours.html">TOURS</a></li>
@@ -178,7 +178,7 @@
     <div class="footer-col">
       <h4>Menu</h4>
       <ul class="footer-nav">
-        <li><a href="homepage.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="cruises.html">CRUISES</a></li>
         <li><a href="packages.html">CRUISE PACKAGES</a></li>
         <li><a href="tours.html">TOURS</a></li>
