--- a/tour_details.html
+++ b/tour_details.html
@@ -29,6 +29,12 @@
   <header>
     <nav class="navbar">
       <div class="logo">CruiseTheGreek.com</div>
+
+        <button class="menu-toggle" aria-label="Toggle Menu">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+
+
       <ul class="nav-links">
         <li><a href="index.html">HOME</a></li>
         <li><a href="results.html?type=cruise_only">CRUISES</a></li>
@@ -320,7 +326,16 @@ document.addEventListener("DOMContentLoaded", () => {
     });
 });
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const toggleBtn = document.querySelector(".menu-toggle");
+    const navLinks = document.querySelector(".nav-links");
 
+    toggleBtn.addEventListener("click", () => {
+      navLinks.classList.toggle("active");
+    });
+  });
+</script>
 
 
 </body>
