--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="card-grid" id="cruiseOnlyGrid"></div>
 
 <div class="see-more-container">
-  <a href="results.html" class="see-more-btn">See More</a>
+  <a href="results.html?type=cruise_only" class="see-more-btn">See More</a>
 </div>
 
 </section>
