--- a/results.html
+++ b/results.html
@@ -231,7 +231,7 @@ document.addEventListener("DOMContentLoaded", () => {
       <div class="info-group">
         <label for="dates-${pkg.title.replace(/\s+/g, '-')}">Departure:</label>
         <select id="dates-${pkg.title.replace(/\s+/g, '-')}" class="date-select">
-          <option disabled selected>Select date</option>
+          <option disabled selected>See dates</option>
           ${dateOptions}
         </select>
       </div>
@@ -326,7 +326,7 @@ document.addEventListener("DOMContentLoaded", () => {
       <div class="info-group">
         <label for="dates-${cruise.title.replace(/\s+/g, '-')}">Departure:</label>
         <select id="dates-${cruise.title.replace(/\s+/g, '-')}" class="date-select">
-          <option disabled selected>Select date</option>
+          <option disabled selected>See dates</option>
           ${dateOptions}
         </select>
       </div>
