--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <div class="info-group">
                   <label>Departure:</label>
                   <select class="date-select">
-                    <option disabled selected>Select date</option>
+                    <option disabled selected>See dates</option>
                     ${dateOptions}
                   </select>
                 </div>
@@ -393,7 +393,7 @@ document.addEventListener("DOMContentLoaded", () => {
                 <div class="info-group">
                   <label>Departure:</label>
                   <select class="date-select">
-                    <option disabled selected>Select date</option>
+                    <option disabled selected>See dates</option>
                     ${dateOptions}
                   </select>
                 </div>
