--- a/destinations.html
+++ b/destinations.html
@@ -64,6 +64,15 @@
       text-align: center;
       font-size: 18px;
     }
+    .title-line {
+  display: inline-block;
+  width: 60px;
+  height: 2px;
+  background: #ff6600;
+  vertical-align: middle;
+  margin: 0 12px;
+}
+
   </style>
 </head>
 
@@ -88,7 +97,11 @@
   </header>
 
   <main class="destinations-page">
-    <h1>Popular Greek Destinations</h1>
+     <h1>
+  <span class="title-line"></span>
+  Popular Greek Destinations
+  <span class="title-line"></span>
+</h1>
     <div class="destinations-grid" id="destinationsGrid"></div>
   </main>
 
