--- a/ships.html
+++ b/ships.html
@@ -303,6 +303,7 @@
       <li><a href="ships.html">CRUISE SHIPS</a></li>
       <li><a href="destinations.html">DESTINATIONS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="faqs.html" class="active">FAQ</a></li>
     </ul>
   </nav>
 </header>
