--- a/destination-details.html
+++ b/destination-details.html
@@ -317,6 +317,7 @@ body {
         <li><a href="ships.html">CRUISE SHIPS</a></li>
         <li><a href="destinations.html">DESTINATIONS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="faqs.html" class="active">FAQ</a></li>
       </ul>
     </nav>
   </header>
