--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <li><a href="ships.html">CRUISE SHIPS</a></li>
       <li><a href="destinations.html">DESTINATIONS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="faqs.html" class="active">FAQ</a></li>
     </ul>
   </nav>
 </header>
@@ -413,7 +414,7 @@ document.addEventListener("DOMContentLoaded", () => {
                       <div class="image-features">
                       ${featuresHTML}
                       </div>
-                      
+
                 <button class="map-btn" type="button" title="View Map">
                   <i class="fa-solid fa-map-location-dot"></i>
                 </button>
