--- a/results.html
+++ b/results.html
@@ -43,6 +43,7 @@
       <li><a href="ships.html">CRUISE SHIPS</a></li>
       <li><a href="destinations.html">DESTINATIONS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="faqs.html" class="active">FAQ</a></li>
     </ul>
   </nav>
 </header>
@@ -163,6 +164,7 @@
         <li><a href="ships.html">CRUISE SHIPS</a></li>
         <li><a href="destinations.html">DESTINATIONS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="faqs.html" class="active">FAQ</a></li>
       </ul>
     </div>
 
